--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-DATABASE_URL=postgresql://postgres:[PASSWORD]@[HOST]:5432/postgres
+NEXT_PUBLIC_SUPABASE_URL=https://YOUR_PROJECT_REF.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
+SUPABASE_SERVICE_ROLE_KEY=YOUR_SUPABASE_SERVICE_ROLE_KEY
 SEED_TOKEN=pon-un-token-largo-y-seguro
+APP_BASE_URL=http://localhost:3000
 
-
-# kioskolu2026!
