--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_SUPABASE_URL=https://YOUR_PROJECT_REF.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
 SUPABASE_SERVICE_ROLE_KEY=YOUR_SUPABASE_SERVICE_ROLE_KEY
-SUPABASE_DB_URL=postgresql://postgres:[PASSWORD]@[HOST]:5432/postgres
+SUPABASE_DB_URL=postgresql://postgres:kiosko2026!@db.lfwfqygcfowfzprexhez.supabase.co:5432/postgres
 SEED_TOKEN=pon-un-token-largo-y-seguro
 APP_BASE_URL=http://localhost:3000
